# mesh

./: .gitignore  .pool-info  AGENTS.md  BLOCKUPDATES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENGINE.md  EXTRAPOLATION.md  FINAL_STATUS.md  FIXDOC.md  IMPLEMENTATION.md  INSIGHT.md  LAN_DISCOVERY_TEST.md  LOGGING.md  PLAN.md  QUICKSTART.md  README.md  READY_TO_USE.md  REFACTOR.md  SETUP.md  TUNEUP.md  WORKING.md  ZIPPERF.md  device1.sh  device2.sh  install.sh  meshnet-viz.html  test_integration.sh  tl-client.sh
.fozzy/traces/: production_dispatch.1.fozzy  production_dispatch.2.fozzy  production_dispatch.3.fozzy  production_dispatch.4.fozzy  production_dispatch.5.fozzy  (+1 more)
.tl/: config.toml
agent/: .gitignore  Cargo.toml
agent/.jj/repo/: config.toml
agent/.jj/working_copy/: checkout
agent/examples/: relay_connectivity.rs
agent/src/: connectivity.rs  errors.rs  lib.rs  main.rs  model_assets.rs  resource_manager.rs  storage_manager.rs  ui.rs  zip.rs
agent/src/api/: mod.rs  registration.rs  types.rs
agent/src/checkpoint/: manager.rs  mod.rs  types.rs
agent/src/device/: capabilities.rs  keypair.rs  mod.rs
agent/src/discovery/: beacon.rs
agent/src/executor/: embeddings.rs  job_runner.rs  mod.rs  ring_allreduce.rs  types.rs
agent/src/inference/: artifact_loader.rs  backend.rs  coordinator.rs  engine.rs  fast_path.rs  forward_pass.rs  job.rs  kv_cache.rs  mock_loader.rs  mock_validation.rs  mod.rs  runtime.rs  stats.rs  tensor_ops.rs
agent/src/model/: mod.rs  registry.rs  shard.rs
agent/src/network/: events.rs  job_protocol.rs  mesh_swarm.rs  mod.rs  ring_gossip.rs  ring_gossip_service.rs  tensor_message.rs  tensor_plane.rs  tensor_protocol.rs
agent/src/observability/: logging.rs  mod.rs
agent/src/pki/: mod.rs  pool.rs  types.rs
agent/src/provider/: mod.rs
agent/src/scheduler/: job_queue.rs  mod.rs
agent/src/telemetry/: ledger.rs  memory.rs  mod.rs
agent/tests/: full_pipeline_integration.rs  real_artifact_loading.rs  ring_allreduce_integration.rs
control-plane/: .env.example  Cargo.toml  docker-compose.yml
control-plane/migrations/: 001_create_networks.sql  002_create_devices.sql  003_create_ledger_events.sql  004_add_ring_topology.sql  005_add_storage_tracking.sql  005_create_inference_dispatch.sql  006_add_device_connectivity_state.sql  007_add_device_peer_metadata.sql  008_add_device_direct_candidates.sql  009_add_inference_assignment_metrics.sql  010_add_ring_model_id.sql  011_add_assignment_capacity_and_shards.sql  012_add_credit_reservation_and_allowance.sql  013_add_realtime_accounting_progress.sql  014_add_execution_plan_to_inference_jobs.sql  015_add_phase_timing_to_inference_jobs.sql  016_add_active_segment_to_inference_jobs.sql  017_add_assignment_segment_lifecycle.sql  018_create_inference_sessions.sql  019_create_inference_session_replicas.sql  020_create_inference_session_checkpoints.sql  021_create_inference_serving_groups.sql  022_create_inference_decode_queue.sql  023_add_scheduler_visibility_metadata.sql  024_create_inference_regroup_events.sql  025_add_decode_batch_telemetry_to_inference_sessions.sql  026_add_decode_batch_pressure_to_inference_sessions.sql  027_create_inference_decode_batch_events.sql  028_add_decode_lease_batch_targets.sql  029_add_decode_batch_group_key.sql  030_add_target_fields_to_decode_batch_events.sql  031_create_inference_scheduler_events.sql  032_create_inference_session_kv_residency.sql  033_create_inference_session_kv_transfers.sql  034_create_inference_prompt_cache_entries.sql  035_cleanup_superseded_kv_checkpoint_fields.sql  036_add_explicit_shard_identity.sql  037_add_device_memory_telemetry.sql  038_add_backend_contract_metadata.sql  039_add_support_group_roles.sql  (+3 more)
control-plane/src/: connectivity.rs  consumption_policy.rs  credit_policy.rs  device.rs  lib.rs  main.rs  model_assets.rs  provider.rs  state.rs
control-plane/src/api/: error.rs  inference.rs  ledger.rs  mod.rs  ring.rs  routes.rs  status.rs  types.rs
control-plane/src/db/: mod.rs  models.rs
control-plane/src/services/: certificate.rs  device_service.rs  failover.rs  mod.rs  network_service.rs  planner.rs  presence.rs  ring_manager.rs  scheduler.rs  topology_notifier.rs
control-plane/tests/: db_integration.rs
mesh-ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.oxlint.json  vite.config.mjs
reference/: .envrc  .gitignore  Cargo.toml  README.md  __project__.nix  address.rs  behaviour.rs  config.rs  interface.rs  ip.rs  main.rs  mod.rs
relay-server/: Cargo.toml  README.md
relay-server/examples/: test_client.rs
relay-server/src/: auth.rs  config.rs  errors.rs  events.rs  lib.rs  main.rs  relay.rs
runbooks/: README.md  failover-regroup.md  kv-pressure.md  scheduler-stalls.md
scripts/: fetch_hf_llama_to_meshnet.py  mesh-ui-dev.zsh  reshard_meshnet_model.py  test_live_relay_runtime.sh  test_real_artifact_loading.sh  test_real_cluster_inference.sh
tests/: api_persistence_data_model.fozzy.json  collective_buffer_cutover.fozzy.json  continuous_batching.fozzy.json  device_sampling_cutover.fozzy.json  direct_upgrade_live_relay_runtime.fozzy.json  execution_order_full_stack.fozzy.json  failover_readiness_gates.fozzy.json  failover_regroup.fozzy.json  incremental_decode_recovery.fozzy.json  live_kv_window_retention.fozzy.json  live_relay_runtime.fozzy.json  model_layout_planning.fozzy.json  multi_peer_live_relay_runtime.fozzy.json  multi_session_decode_batching.fozzy.json  observability_operations.fozzy.json  pooled_scheduler_behavior.fozzy.json  pressure_soak.fozzy.json  production_dispatch.fozzy.json  punch_path_coordination.fozzy.json  real_artifact_loading.fozzy.json  real_cluster_inference.fozzy.json  release_benchmark_matrix.fozzy.json  release_observability_gates.fozzy.json  runtime_decode_guardrails.fozzy.json  runtime_serving_engine.fozzy.json  segmented_kv_checkpointing.fozzy.json  serving_production_integrated.fozzy.json  session_kv_residency.fozzy.json  staggered_direct_upgrade_live_relay_runtime.fozzy.json  transport_collective_evolution.fozzy.json
(+158 files in other folders)
