[workspace]
resolver = "2"
members = [
    # Future workspace members will go here:
    # "agent",           # Desktop/mobile agent
    # "relay",           # Relay server
    # "control-plane",   # Control plane API (might be separate repo)
]

[workspace.package]
version = "0.1.0"
authors = ["MeshAI Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/meshai/mesh"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking (libp2p ecosystem) - inspired by Carcass reference implementation
libp2p = { version = "0.56", features = ["tcp", "quic", "noise", "yamux", "relay", "dcutr", "identify"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"  # CBOR for job envelopes
toml = "0.8"

# Cryptography
ed25519-dalek = "2.1"
multibase = "0.9"

# Job queue (lock-free ring buffer - pattern from Carcass)
ringbuf = "0.4"

# Unique identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Metrics and observability
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
tokio-util = "0.7"
bytes = "1.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
