[package]
name = "agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
libp2p.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
ciborium.workspace = true
ed25519-dalek.workspace = true
multibase.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
sysinfo = "0.30"
dirs = "5.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
colored = "2.1"
chrono = "0.4"

# ML inference (mocked for now)
# TODO: Add real ONNX Runtime when implementing full inference
# ort = "2.0"
# tokenizers = "0.20"
# ndarray = "0.16"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serde_json.workspace = true
