[package]
name = "control-plane"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "time"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy = "0.15"
time = { version = "0.3", features = ["serde"] }
rust_decimal = "1.35"
