[package]
name = "control-plane"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time = { version = "0.3", features = ["serde", "formatting"] }
dirs = "5.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
ciborium = "0.2"
multibase = "0.9"
rand = "0.8"
toml.workspace = true
futures = "0.3"
