[package]
name = "relay-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
libp2p.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
