[package]
name = "relay-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
libp2p.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
futures = "0.3"
dirs = "5.0"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
